Bug 43521 - Cross-reference should not be hidden when field names are shown
Summary: Cross-reference should not be hidden when field names are shown
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.4 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-04 12:44 UTC by Jean-Baptiste Faure
Modified: 2011-12-08 04:44 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
bugdoc with cross-reference (8.82 KB, application/vnd.oasis.opendocument.text)
2011-12-04 12:44 UTC, Jean-Baptiste Faure
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2011-12-04 12:44:44 UTC
Created attachment 54113 [details]
bugdoc with cross-reference

Step to reproduce:
- open the attached document, you see cross-references
- choose menu View -> Field names or click ctrl+F9

Result: cross-reference are not visible and nothing is shown because there is no name for this field.

Show preview: cross-reference are there.

Expected result: cross-reference should not be affected by ctrl+F9

If you hit ctrl+F9 when you do not have field in your document, you do not understand why inserting cross-reference seems to not work. In such a case it is very difficult to find what went wrong.

Best regards. JBF
Comment 1 Cédric Bosdonnat 2011-12-08 03:36:41 UTC
Fixed by this commit in master (3.6):
http://cgit.freedesktop.org/libreoffice/core/commit/?id=2e2c804b20db136691dcd8a25ceccffceeefd280