fdo#43521: Don't shown the name of a reference field if it's empty